--- a/.github/workflows/scrape_rec.yml
+++ b/.github/workflows/scrape_rec.yml
@@ -44,11 +44,34 @@ jobs:
       run: |
         git config --local user.email "davethe@naver.com"
         git config --local user.name "developers_Auto" 
-        git add ./public/data/data.json
+        git add ./src/data/data.json
         git commit -m "Auto - Update data with Scraping"
         git pull origin master
     - name: Push
       uses: ad-m/github-push-action@master
       with:
         branch: 'master'
-        github_token: ${{ secrets.GITHUB_TOKEN }} 
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+
+  deploy:
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x]
+        
+    steps:
+    - uses: actions/checkout@v1
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Install Packages
+      run: npm install
+    - name: Build page
+      run: npm run build
+    - name: Deploy to gh-pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        publish_dir: ./build
